Bug 466526 - Kate crash when I make a new session and I right-click on the "Welcome" item in the sidebar
Summary: Kate crash when I make a new session and I right-click on the "Welcome" item ...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.2
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
: 467614 467655 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-02-27 14:11 UTC by David REVOY
Modified: 2023-03-21 16:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.24 KB, text/plain)
2023-03-04 14:13 UTC, Balázs Róbert Börcsök
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2023-02-27 14:11:06 UTC
Application: kate (22.12.2)

Qt Version: 5.15.8
Frameworks Version: 5.103.0
Operating System: Linux 6.1.13-200.fc37.x86_64 x86_64
Windowing System: X11
Distribution: Fedora Linux 37 (KDE Plasma)
DrKonqi: 5.27.1 [KCrashBackend]

-- Information about the crash:
Hi,
To reproduce, start Kate (with Plasma menu) then choose a New Session, then a New File. In the Sidebar, a tree mention "Open Widgets", it has an item with a Kate icon (a sort of blue planet) and the label "Welcome". Right click on this item. Result: Crash 100% reproducible.

The crash can be reproduced every time.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f5b732895ff in KateFileTree::contextMenuEvent(QContextMenuEvent*) () from /usr/lib64/qt5/plugins/ktexteditor/katefiletreeplugin.so
#5  0x00007f5bb19f1938 in QWidget::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#6  0x00007f5bb1a9e622 in QFrame::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#7  0x00007f5bb0c9d2b1 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#8  0x00007f5bb19aed52 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#9  0x00007f5bb19b6370 in QApplication::notify(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#10 0x00007f5bb0c9d4e8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#11 0x00007f5bb1a0b6a5 in QWidgetWindow::handleMouseEvent(QMouseEvent*) () from /lib64/libQt5Widgets.so.5
#12 0x00007f5bb1a0e060 in QWidgetWindow::event(QEvent*) () from /lib64/libQt5Widgets.so.5
#13 0x00007f5bb19aed62 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#14 0x00007f5bb0c9d4e8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#15 0x00007f5bb116ad6d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib64/libQt5Gui.so.5
#16 0x00007f5bb1149f1c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Gui.so.5
#17 0x00007f5b9e11690e in xcbSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5XcbQpa.so.5
#18 0x00007f5bae718c7f in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#19 0x00007f5bae76f118 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#20 0x00007f5bae715f00 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#21 0x00007f5bb0cee5fa in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#22 0x00007f5bb0c9bf3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#23 0x00007f5bb0ca4002 in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#24 0x000055d8d00b93b8 in main ()
[Inferior 1 (process 16686) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2023-02-27 15:09:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1133
Comment 2 Waqar Ahmed 2023-02-27 19:28:30 UTC
Git commit 1a911d43e086ba3b94ef4dd73b85975c1f034e13 by Waqar Ahmed.
Committed on 27/02/2023 at 15:21.
Pushed by cullmann into branch 'master'.

Fix widgets not cleared on new session

M  +39   -5    apps/lib/autotests/kate_view_mgmt_tests.cpp
M  +1    -0    apps/lib/autotests/kate_view_mgmt_tests.h
M  +11   -0    apps/lib/session/katesessionmanager.cpp

https://invent.kde.org/utilities/kate/commit/1a911d43e086ba3b94ef4dd73b85975c1f034e13
Comment 3 Waqar Ahmed 2023-02-28 13:09:05 UTC
Git commit 8dd60d94e4850e27a1245189e2f7c5f1f7f74d0a by Waqar Ahmed.
Committed on 28/02/2023 at 13:07.
Pushed by waqar into branch 'release/22.12'.

Fix widgets not cleared on new session

M  +39   -5    apps/lib/autotests/kate_view_mgmt_tests.cpp
M  +1    -0    apps/lib/autotests/kate_view_mgmt_tests.h
M  +11   -0    apps/lib/session/katesessionmanager.cpp

https://invent.kde.org/utilities/kate/commit/8dd60d94e4850e27a1245189e2f7c5f1f7f74d0a
Comment 4 Balázs Róbert Börcsök 2023-03-04 14:13:47 UTC
Created attachment 156992 [details]
New crash information added by DrKonqi

kate (22.12.3) using Qt 5.15.8

1. Click on "Documents".
2. Create a new "Welcome" widget. You should have at least 2 "Welcome" widgets.
3. Close the active "Welcome" widget from the "Documents" tree view.
4. Click on the other "Welcome" widget.
5. Crash.

-- Backtrace (Reduced):
#6  0x00007f43cf7e27fa in QAbstractItemView::clicked(QModelIndex const&) () from /usr/lib/libQt5Widgets.so.5
#7  0x00007f43cf7dd9f5 in QAbstractItemView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQt5Widgets.so.5
#8  0x00007f43cf5af837 in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#9  0x00007f43cf65da23 in QFrame::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#10 0x00007f43ce88dbb2 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
Comment 5 Waqar Ahmed 2023-03-20 17:04:24 UTC
*** Bug 467614 has been marked as a duplicate of this bug. ***
Comment 6 Waqar Ahmed 2023-03-21 16:03:46 UTC
*** Bug 467655 has been marked as a duplicate of this bug. ***