Fix widgets not cleared on new session

BUG: 466526